css/work.css
html {
	height: 100%;
}

body {
	height: 100%;
}

.project {
	position: relative;
	background-attachment: fixed;
	background-color: #000;
	background-repeat: no-repeat;
	background-position: 50% 38px;
	width: 100%;
	height: 100%;
}

.blueprint_covered {
	background-image: url(../images/work/work_blueprint_covered.jpg);
	transition: 2s;
	-webkit-transform: translate3d(0, 0, 0);
	-webkit-transform: translateZ(0);
}

.blueprint {
	background-image: url(../images/work/work_blueprint.jpg);
}

.flixer_covered {
	background-image: url(../images/work/work_flixer_covered.jpg);
	transition: 2s;
	-webkit-transform: translate3d(0, 0, 0);
	-webkit-transform: translateZ(0);
}

.flixer {
	background-image: url(../images/work/work_flixer.jpg);
}

.realitiy_covered {
	background-image: url(../images/work/work_realitiy_covered.jpg);
	transition: 2s;
	-webkit-transform: translate3d(0, 0, 0);
	-webkit-transform: translateZ(0);
}

.realitiy {
	background-image: url(../images/work/work_realitiy.jpg);
}

.infiniti_covered {
	background-image: url(../images/work/work_infiniti_covered.jpg);
	transition: 2s;
	-webkit-transform: translate3d(0, 0, 0);
	-webkit-transform: translateZ(0);
}

.infiniti {
	background-image: url(../images/work/work_infiniti.jpg);
}

.wun_covered {
	background-image: url(../images/work/work_wun_covered.jpg);
	transition: 2s;
	-webkit-transform: translate3d(0, 0, 0);
	-webkit-transform: translateZ(0);
}

.wun {
	background-image: url(../images/work/work_wun.jpg);
}

.work_preview_text {
	opacity: 0;
	z-index: 99;
	position: absolute;
	bottom: 110px;
	right: 0;
	margin-right: 200px;
	font-family: Verdana, Arial, Sans-serif;
	font-size: 50px;
	color: #DDD;
	transition: 2s;
}

.work_preview_text:hover {
	transition: 1.3s;
}

.blueprint_text {
	opacity: 1;
}

.blueprint_text:hover {
	color: rgb(0,89,178);
}

.flixer_text:hover {
	color: rgb(255,191,0);
}

.realitiy_text {
	color: #000;
}

.realitiy_text:hover {
	color: rgb(96,215,0);
}

.infiniti_text:hover {
	color: rgb(155,155,140);
}

.wun_text:hover {
	color: rgb(69,159,170);
}

.arrow_container {
	position: relative;
	width: 0;
	height: 0;
	right: 28.5px;
	margin: 0 auto;
}

.arrow_up {
	border-left: 30px solid transparent;
	border-right: 30px solid transparent;
	border-bottom: 30px solid #FFF;
}

.arrow_down {
	border-left: 30px solid transparent;
	border-right: 30px solid transparent;
	border-top: 30px solid #FFF;
}

.arrow {
	max-width: 100px;
	z-index: 997;
	position: fixed;
	width: 0;
	height: 0;
	bottom: 10px;
	margin: 0 auto;
	transition: 1s;
	webkit-animation-name: point_down;
	webkit-animation-duration: 2.5s;
	webkit-animation-timing-function: linear;
	webkit-animation-iteration-count: infinite;
	animation-name: point_down;
	animation-duration: 2.5s;
	animation-timing-function: linear;
	animation-iteration-count: infinite;
}

@-webkit-keyframes point_down {
	0% {bottom: 10px}
	25% {bottom: 20px}
	50% {bottom: 30px;}
	75% {bottom: 20px}
	100% {bottom: 10px}
}

@keyframes point_down {
	0% {bottom: 10px}
	25% {bottom: 20px}
	50% {bottom: 30px;}
	75% {bottom: 20px}
	100% {bottom: 10px}
}

@media only screen and (min-width: 1366px) {

	.project {
		background-position: 50%;
	}

	.work_preview_text {
		bottom: 230px;
		right: 0;
		margin-right: 240px;
	}
}

@media only screen and (min-width: 1600px) {

	.project {
		background-position: 50%;
	}

	.work_preview_text {
		bottom: 260px;
		right: 0;
		margin-right: 360px;
	}
}

@media only screen and (max-width: 1024px) {

	.project {
		background-position: 50% 40%;
	}

	.work_preview_text {
		bottom: 120px;
		right: 0;
		margin-right: 70px;
	}
}

@media only screen and (max-width: 768px) {

	.project {
		background-position: 50%;
	}

	.work_preview_text {
		bottom: 230px;
		right: 0;
		margin-right: 20px;
	}
}

@media only screen and (max-width: 414px) {

	.project {
		background-attachment: fixed;
	}

	.work_preview_text {
		opacity: 1;
		top: 17px;
		left: 10px;
		height: 30px;
		width: 275px;
		margin-right: 0;
		font-size: 32px;
	}

	.blueprint_text {
		opacity: 1;
		color: rgb(0,89,178);
	}

	.flixer_text {
		color: rgb(255,191,0);
	}

	.realitiy_text {
		color: rgb(96,215,0);
	}

	.infiniti_text {
		color: rgb(155,155,140);
	}

	.wun_text {
		color: rgb(69,159,170);
	}
}

@media only screen and (max-width: 375px) {

	.work_preview_text {
		top: 2px;
	}
}

@media only screen and (max-width: 320px) {

	.work_preview_text {
		font-size: 25px;
	}
}

